--- a/tuturial.html
+++ b/tuturial.html
@@ -16,7 +16,7 @@
 <!-- navbar start--------------------------------------------------------------------------- -->
   <nav class=" top-navbar white z-depth-3" >
     <div class="nav-wrapper ">
-      <a href="#!" class="class=brand-logo light-blue-text accent-3   hide-on-med-and-up">Home</a>
+      <a href="#!" class="class=brand-logo light-blue-text accent-3   hide-on-med-and-up">user management</a>
       <a href="#" data-target="mobile-demo" class="sidenav-trigger light-blue-text "><i class="material-icons">menu</i></a>
       <li><div class="divider z-depth-1 grey "></div></li>
       <ul class="left hide-on-med-and-down brown-text ">
@@ -46,18 +46,32 @@
     <li><a class="subheader">Subheader</a></li>
    <!-- navbar  end------------------------------------------------------------------------ -->
   </ul>
+<section id="top-action-section">
+    <div class="p-l-10 p-r-10 p-t-10">
+    <button class="waves-effect waves-light btn blue darken-2 p-l-30 p-r-30 w-full rounded_pill flex-c">
+        <i class="material-icons m-r-5">add</i>
+        Add User
+
+    </button>
+</div>
+<!-- -------------------search section---------------- -->
+<div class="row">
+    <div class="input-field col s12">
+      <input   id="search" type="text" class="validate">
+      <label for="search">
+        <i class="material-icons pos-relative top-7">search</i>
+        
+        search</label>
+    </div>
+  </div>
+</section>
 
 
 
 
 
 
-
-      <section class="flex-c-m flex-col sizefull p-r-20 p-l-20 p-t-100">
-        <img src="pic/pngtree-abstract-curved-lines-background-png-image_8427312.png" class="w-full max-w-400 filter_shadow " >
-        <a href="/tuturial.html" class ="waves-effect waves-light btn  light-green darken-1  w-full max-w-250 m-t-10 m-b-10 rounded_pill" >Programing Tutorial</a>
-        <a href="/tuturial.html" class ="waves-effect waves-light btn light-green darken-1 w-full max-w-250 m-t-10 m-b-10 rounded_pill">   game Tutorial</a>
-      </section> 
+      
 <script src="/materialize/js/materialize.min.js"></script> 
 <script src="/js/main.js" ></script> 
 
