--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/materialize/css/materialize.min.css">
+    <link rel="stylesheet" href="/materialize/css/materialize-rtl.css">
     <link rel="stylesheet" href="css/style.css">
-    
     <link rel="stylesheet" href="/css/util.css">
+    <link rel="icon" type="image/ x-icon" href="/pic/favicon.ico">
   
     
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
-<body>
+<body >
 <!-- navbar start--------------------------------------------------------------------------- -->
   <nav class=" top-navbar white z-depth-3" >
     <div class="nav-wrapper ">
